<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006200EE"
        android:clickable="false"
        android:fontFamily="casual"
        android:text="@string/texto_principal"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/button2"
        android:layout_width="123dp"
        android:layout_height="71dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:onClick="sendMessage"
        android:text="@string/button_generar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="235dp"
        android:layout_height="47dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/textfield_mensaje"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8sp"
        android:singleLine="false"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>